修正界面上的HeadListForRowPanel上会显示下一个数据的上半部分
改解码方式为GBK

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//src/view=UTF-8
-encoding/<project>=UTF-8
+encoding//src/view/tablePanel=GBK
+encoding//src/view/tablePanel/TablePanel.java=GBK
