--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -2,3 +2,4 @@ eclipse.preferences.version=1
 encoding//src/view=UTF-8
 encoding//src/view/tablePanel=GBK
 encoding//src/view/tablePanel/TablePanel.java=GBK
+encoding/<project>=UTF-8
