--- a/.classpath
+++ b/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="E:/课件/软件工程与计算/大二下学期/batik-1.7/batik.jar"/>
-	<classpathentry kind="lib" path="E:/课件/软件工程与计算/大二下学期/ref/docs/功能测试/testData.jar"/>
+	<classpathentry kind="lib" path="F:/南京大学/课程/软件工程与计算/软工3/docs/功能测试/testData.jar"/>
+	<classpathentry kind="lib" path="F:/南京大学/编程/Java/batik-1.7/batik.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
